<resources>
    <string name="app_name">WiDaC</string>

    <string name="connect_device">Connect New Device</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="visualization">Visualization</string>
    <string name="prompt_id">Enter item ID</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="curr_connected">Currently connected to:</string>
    <string name="update_bluetooth">Bluetooth</string>
    <string name="update_manual">Manual</string>
    <string name="prompt_weight">Enter new weight</string>
    <string name="pair_device">Pair New Device</string>
    <string name="sessionReport">Session Report</string>
    <string name="update_weight">Select a method to update weight:</string>
    <string name="spinnerHint">area_easting, area_northing, context_number, sample_number</string>
    <string name="dropdown_hint">Select Area Easting to begin</string>
</resources>
