<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="widac.cis350.upenn.edu.widac.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_title"
            android:gravity="center_horizontal"
            android:textSize="20pt" />

        <TextView
            android:text="@string/curr_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt" />

        <TextView
            android:text="No device connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:id="@+id/connected_device" />

        <TextView
            android:text="No database connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:id="@+id/connectedDB" />

        <TextView
            android:text="Paired Devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12pt"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:id="@+id/paired_devices_list">

        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_search"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="onSettingsSearchButtonClick"
                android:text="Search"
                android:textStyle="bold"
                android:layout_weight="75"/>
            <Button
                android:id="@+id/update_manual"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="onPairDeviceClick"
                android:text="@string/pair_device"
                android:textStyle="bold"
                android:layout_weight="5"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
